hold/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: frontend-ns
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
